new file:   clone/Amazon/jatin.jpg

--- a/3D Card Animation/(Advance) 3D Card Animation.html
+++ b/3D Card Animation/(Advance) 3D Card Animation.html
@@ -77,7 +77,7 @@
 
     .sub {
       font-size: 14px;
-      color: var(--muted);
+      color: var(muted);
       max-width: 28ch;
       text-align: center;
     }
